CI: Prepare to use latest Ruby in publish workflow
Unignore .ruby-version, and skip it when linting with old Ruby.

Remove wrapping scripts for Ruby tools.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,17 +15,17 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v4
+      - run: rm .ruby-version
 
       - name: Set up Ruby 2.7
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
+          bundler-cache: true
 
       - name: Rubocop
-        run: |
-          bin/setup
-          bin/ci-lint
+        run: bundle exec rubocop --format progress
 
   test:
     needs: [lint]
@@ -35,17 +35,13 @@ jobs:
         ruby: ['2.5', '2.6', '2.7', '3.0']
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v4
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-
-      - name: Build
-        run: |
-          bin/setup
+          bundler-cache: true
 
       - name: Test
-        run: |
-          bin/ci-test
+        run: bundle exec rspec
